<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Introversion-In-Depth</string>

    <string name="which_kind">Que tipo de introvertido \nvocê é?</string>
    <string name="second_title">Conheça os diferentes aspectos dessa parte frequentemente generalizada de si.</string>
    <string name="start_quiz">Começar Quiz</string>
    <string name="results">Resultados</string>
    <string name="no_results">Sem resultados para exibir</string>
    <string name="must_select">Por favor, selecione uma opção para prosseguir</string>
    <string name="about_the_test">Sobre o quiz</string>
    <string name="copyright_disclaimer">Conteúdo para esse quiz foi retirado diretamente do artigo abaixo:</string>
    <string name="link_to_article">What kind of introvert are you \n(link clicável)</string>
    <string name="content_description">media</string>
    <string name="each_type">Each Type</string>
    <string name="icon">icon</string>

    <string name="social">Introvertido Social</string>
    <string name="thinking">Introvertido Comtemplativo</string>
    <string name="anxious">Introvertido Ansioso</string>
    <string name="restrained">Introvertido Contido</string>

    <string name="r_social">Social</string>
    <string name="r_thinking">Contemplativo</string>
    <string name="r_anxious">Ansioso</string>
    <string name="r_restrained">Contido</string>

    <string name="ranking_option_1">Muito atípico ou falso, discordo fortemente</string>
    <string name="ranking_option_2">Pouco característico</string>
    <string name="ranking_option_3">Neutro</string>
    <string name="ranking_option_4">Característico</string>
    <string name="ranking_option_5">Muito característico ou verdadeiro, concordo fortemente</string>

    <string name="score">Score: %d</string>
    <string name="level">Nível: %s</string>

    <string name="low">Baixo</string>
    <string name="average">Médio</string>
    <string name="high">Alto</string>

    <string name="btn_back">Voltar</string>
    <string name="btn_next">Avançar</string>
    <string name="leave">Sair</string>
    <string name="btn_stay">Ficar</string>
    <string name="btn_share">Compartilhar</string>
    <string name="close">Fechar</string>
    <string name="quiz_progress">%d/40</string>
    <string name="quiz_progress_placeholder">1/40</string>
    <string name="warning">Tem certeza de que deseja interromper o quiz agora? Seu progresso será salvo.</string>
    <!--    <string name="you_are_mostly_a">You are mostly a</string>-->
    <string name="language">Idioma</string>

    <string name="why_a_quiz">Porque existe um quiz para isso?</string>
    <string name="types_of_introversion">Tipos de Introversão</string>

    <string name="how_is_it_calculated">Para entender a relevância desse teste, leia o artigo a seguir:</string>
    <string name="link">https://blogs.scientificamerican.com/beautiful-minds/what-kind-of-introvert-are-you/#</string>

    <string name="how_is_it_calculated2">\nNele você encontrará a motivação para a criação desse teste e também uma explicação de como o resultado é calculado.\n</string>

    <string name="each_type_definition">As definições a seguir foram retiradas do seguinte artigo:</string>
    <string name="link2">https://www.refinery29.com/en-gb/types-of-introverts</string>

    <string name="the_social_introvert">Introvertidos sociais favorecem seu tempo sozinho mais do que a maior parte das pessoas. Em situações sociais, tendem a optar por grupos de poucas  pessoas em oposição a grupos com muitas pessoas. Não é que eles não consigam desfrutar de situações sociais, é mais uma questão de preferência.\n\nO principal motivo para isso é que, ao invés de se sentir enérgicos quando em ambientes com outras pessoas como as pessoas que são extrovertidas, introvertidos sociais sentem sua energia ser drenada nesses tipos de situações.</string>
    <string name="the_thinking_introvert">Comtempladores, ou pensadores, são altamente introspectivos e criativos. Eles não precisam ficar sozinhos para se recarregarem, mas eles se desenvolvem criativamente e mentalmente por sí próprios, fazendo uso do \'tempo consigo mesmo\' para auto-refletir e explorar ideias internamente.\n\nEssas pessoas não são necessariamente hyper analíticas mas elas podem se perder em sua própria imaginação, possivelmente transparecendo como um tanto indiferentes quando na verdade estão simplismente processando um questionamento ou uma situação. Ah, e eles são propensos a ter devaneios, então pegue leve com eles. Pensadores tendem a ser mal interpretados como sendo passivos por conta de não serem rápidos para reagir, mas eles estão muito provavelmente apenas digerindo o que está acontecendo, e preferem agir ou dar uma resposta depois de algum tempo.</string>
    <string name="the_anxious_introvert">O introvertido ansioso é frequentemente reservado, e pode até mesmo aparentar estar ansioso ou nervoso por conta de ficarem estressados com facilidade, em particular quando situações enervantes aparecem.\n\nPessoas com esse tipo de introversão irão provavelmente evitar pessoas e ambientes que intensifiquem sua ansiedade. Isso pode parecer ser querer se excluir ou rudez, mas é apenas o mecanismo de defesa deles em ação. Não quer dizer também que eles não gostem de companhia, eles são apenas concientes de suas zonas de conforto e não gostam de ter seus limites ultrapassados.</string>
    <string name="the_restrained_introvert">Menos sobre o lado mental da introversão e mais sobre o comportamental, introvertidos contidos tendem a ser mais cuidadosos em sua abordagem com a vida. Isso os torna seres mais práticos e pés no chão; pensam de forma cuidadosa e responsável em oposição  a pensar de forma indiferente e imaginativa.\n\nPor causa de sua propensão a considerar toda e qualquer possibilidade, eles gostam de atividades previsíveis e podem se desvincular de suas emoções com facilidade.</string>
    <string name="continuation_question">Perece que existe um quiz não finalizado. Gostaria de continua-lo?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="portuguese">Português</string>
    <string name="english">Inglês</string>

    <string-array name="questions">
        // Social Introversion
        <item>Gosto de compartilhar ocasiões especiais com apenas uma pessoa ou alguns amigos próximos, em oposição à grandes celebrações.</item>
        <item>Acho que seria satisfatório se eu pudesse ter uma forte relação de amizade com muitas pessoas.</item>
        <item>Tento estruturar meu dia de forma a sempre ter algum tempo pra mim mesmo.</item>
        <item>Gosto de viajar para lugares onde existem muitas pessoas ao redor e muitas atividades acontecendo.</item>
        <item>Depois de passar algumas horas rodeado por muitas pessoas, costumo ficar ansioso para escapulir para outro lugar.</item>
        <item>Não sinto grande necessidade de estar rodeado por outras pessoas.</item>
        <item>Estar cercado por outras pessoas e poder descobrir mais sobre elas é uma das coisas mais interessantes que eu consigo pensar em fazer.</item>
        <item>Geralmente prefiro fazer as coisas sozinho.</item>
        <item>Outras pessoas tendem a me entender mal - a formar uma impressão errada de que tipo de pessoa eu sou, porque não falo muito de mim mesmo.</item>
        <item>Me sinto exaurido após situações sociais, mesmo naquelas na qual me diverti.</item>

        // Thinking Introversion
        <item>Gosto de analisar minhas próprias ideias e pensamentos sobre mim.</item>
        <item>Tenho uma vida interna rica e complexa.</item>
        <item>Frequentemente penso sobre que tipo de pessoa eu sou.</item>
        <item>Quando estou lendo uma história interessante ou quando estou assistindo a um bom filme, imagino como eu me sentiria se os eventos na história estivessem acontecendo comigo.</item>
        <item>Raramente penso sobre mim mesmo.</item>
        <item>Geralmente presto atenção ao meus próprios sentimentos.</item>
        <item>Valorizo minha própria auto-avaliação, ou seja, a opinião particular que tenho de mim mesmo.</item>
        <item>Algumas vezes volto alguns passos (na minha mente) para poder me auto examinar de um ponto distante.</item>
        <item>Eu devaneio e fantasio, com certa regularidade, sobre coisas que podem acontecer comigo.</item>
        <item>Tenho propensão a ser introspectivo, ou seja, a analisar a mim mesmo.</item>

        // Anxious Introversion
        <item>Quando entro em uma sala, tendo a ficar autoconsciente e a sentir que os outros estão com os olhares sobre mim.</item>
        <item>Meus pensamentos são frequentemente focados em episódios da minha vida sobre os quais eu gostaria de para de pensar.</item>
        <item>Meu sistema nervoso algumas vezes fica tão exausto que eu tenho que me forçar a relaxar.</item>
        <item>Sou confiante a respeito das minhas habilidades sociais.</item>
        <item>Derrota e desapontamento geralmente me deixam com raiva ou com vergonha, mas eu tento não demonstrar isso.</item>
        <item>Não levo muito tempo para superar minha timidez em novas situações.</item>
        <item>Me sinto calmo e confortável mesmo em situações sociais desconhecidas.</item>
        <item>Mesmo quando estou entre amigos, com frequência me sinto sozinho e desconfortável.</item>
        <item>Minhas ações, sentimentos e pensamentos internos aterrorizariam alguns dos meus amigos.</item>
        <item>Me sinto dolorosamente autoconciente quando estou perto de estranhos.</item>

        // Restrained Introversion
        <item>Gosto de me por em ação assim que acordo pela manhã.</item>
        <item>Vou tentar qualquer coisa pelo menos uma vez.</item>
        <item>Para descontração gosto de diminuir o passo e levar as coisas com calma.</item>
        <item>Gosto de me exaurir com tarefas que exigem esforço mental ou físico.</item>
        <item>Frequentemente digo a primeira coisa que vem a minha mente.</item>
        <item>Eu geralmente busco experiências e sensações novas e excitantes.</item>
        <item tools:ignore="Typos">Gosto de me manter ocupado a todo momento.</item>
        <item tools:ignore="Typos">Frequentemente ajo no calor do momento.</item>
        <item>Algumas vezes faço coisas "fora do comum" só para ser diferente.</item>
        <item>Frequentemente me sinto lento.</item>
    </string-array>
</resources>