<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="18dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="70dp"
        android:layout_marginHorizontal="30dp"
        android:paddingVertical="23dp"
        android:background="@drawable/btn_style_rounded_v2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >


        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btn_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.666">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="40dp"
                    android:paddingTop="20dp"
                    android:text="@string/about_the_test"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="45dp"
                    android:background="@drawable/bg_outer_space"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="6dp"
                    android:text="@string/why_a_quiz"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:minHeight="40dp"
                    android:paddingTop="10dp"
                    android:text="@string/how_is_it_calculated"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="13sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_outer_space"
                    android:paddingHorizontal="30dp"
                    android:paddingVertical="6dp"
                    android:text="@string/types_of_introversion"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/link_to_types_article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:paddingTop="10dp"
                    android:text="@string/each_type_definition"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/social"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/the_social_introvert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:minHeight="40dp"
                    android:paddingTop="10dp"
                    android:text="@string/the_social_introvert"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/thinking"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/the_thinking_introvert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:minHeight="40dp"
                    android:paddingTop="10dp"
                    android:text="@string/the_thinking_introvert"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/anxious"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/the_anxious_introvert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:minHeight="40dp"
                    android:paddingTop="10dp"
                    android:text="@string/the_anxious_introvert"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/restrained"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/the_restrained_introvert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:minHeight="40dp"
                    android:paddingTop="10dp"
                    android:text="@string/the_restrained_introvert"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.93"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingTop="7dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/close"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>